--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
-    "mongodb": "^6.16.0",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "mongodb": "^5.9.2",
     "mongoose": "^8.14.1",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
