--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-    "buildCommand": "npm run build",
-    "outputDirectory": ".next",
-    "framework": "nextjs"
-  }
+  "rootDirectory": "src",
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
+  "framework": "nextjs"
+}
